--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "dotenv -e .env.example react-scripts start",
+    "start:dev": "dotenv -e .env react-scripts start",
+    "start:example": "dotenv -e .env.example react-scripts start",
+    "build": "dotenv -e .env.example react-scripts build",
+    "build:prod": "dotenv -e .env.production react-scripts build",
+    "build:example": "dotenv -e .env.example react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -46,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "dotenv-cli": "^7.3.0"
   }
 }
