--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,26 @@
 # GraphQL API 配置
-REACT_APP_GRAPHQL_URI=https://ashengweb3.win/api/chat
+REACT_APP_GRAPHQL_URI=https://your-worker-name.your-subdomain.workers.dev/api/chat
 
-# 如果需要认证，可以添加以下配置
-# REACT_APP_API_KEY=your_api_key_here
-# REACT_APP_AUTH_DOMAIN=your_auth_domain
+# API 基础 URL
+REACT_APP_API_BASE_URL=https://your-worker-name.your-subdomain.workers.dev
 
-# 开发环境配置
+# 环境标识
 REACT_APP_ENV=development
 
-# 其他可选配置
-# REACT_APP_WEBSOCKET_URI=ws://localhost:4000/graphql
-# REACT_APP_UPLOAD_ENDPOINT=http://localhost:4000/upload
+# 应用配置
+REACT_APP_APP_NAME=AI Chat App iOS Style
+REACT_APP_VERSION=1.0.0
+
+# 可选：WebSocket 配置（如果需要实时功能）
+# REACT_APP_WEBSOCKET_URI=wss://your-worker-name.your-subdomain.workers.dev/ws
+
+# 可选：文件上传配置
+# REACT_APP_UPLOAD_ENDPOINT=https://your-worker-name.your-subdomain.workers.dev/upload
+
+# 可选：分析和监控
+# REACT_APP_ANALYTICS_ID=your-analytics-id
+# REACT_APP_SENTRY_DSN=your-sentry-dsn
+
+# 开发环境专用
+# REACT_APP_DEBUG=true
+# REACT_APP_LOG_LEVEL=debug
