--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,34 @@
 # GraphQL API 配置
-REACT_APP_GRAPHQL_URI=https://your-worker-name.your-subdomain.workers.dev/api/chat
+REACT_APP_GRAPHQL_URI=https://your-worker-name.your-subdomain.workers.dev/api/graphql
 
-# API 基础 URL
+# REST API 配置（备用）
 REACT_APP_API_BASE_URL=https://your-worker-name.your-subdomain.workers.dev
+
+# 聊天 API 端点
+REACT_APP_CHAT_API_URI=https://your-worker-name.your-subdomain.workers.dev/api/chat
 
 # 环境标识
 REACT_APP_ENV=development
 
 # 应用配置
-REACT_APP_APP_NAME=AI Chat App iOS Style
+REACT_APP_APP_NAME=DeepSeek AI Chat
 REACT_APP_VERSION=1.0.0
+
+# 功能开关
+REACT_APP_USE_GRAPHQL=true
+REACT_APP_ENABLE_STREAMING=false
+REACT_APP_DEBUG=true
+
+# DeepSeek API 配置（前端显示用，不包含敏感信息）
+REACT_APP_DEFAULT_MODEL=deepseek-chat
+REACT_APP_MAX_TOKENS=2000
+REACT_APP_TEMPERATURE=0.7
+
+# UI 配置
+REACT_APP_THEME=ios
+REACT_APP_LANGUAGE=zh-CN
+REACT_APP_ENABLE_MARKDOWN=true
+REACT_APP_ENABLE_CODE_HIGHLIGHT=true
 
 # 可选：WebSocket 配置（如果需要实时功能）
 # REACT_APP_WEBSOCKET_URI=wss://your-worker-name.your-subdomain.workers.dev/ws
@@ -22,5 +41,5 @@ REACT_APP_VERSION=1.0.0
 # REACT_APP_SENTRY_DSN=your-sentry-dsn
 
 # 开发环境专用
-# REACT_APP_DEBUG=true
 # REACT_APP_LOG_LEVEL=debug
+# REACT_APP_MOCK_API=false
