fix:环境配置修改

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,13 @@
 # GraphQL API 配置
-REACT_APP_GRAPHQL_URI=https://ashengweb3.win/api/chat
+# GraphQL API 配置
+REACT_APP_GRAPHQL_URI=https://ashengweb3.win/api/graphql
+
+# REST API 配置（备用）
+REACT_APP_API_BASE_URL=https://ashengweb3.win
+
+# 聊天 API 端点
+REACT_APP_CHAT_API_URI=https://ashengweb3.win/api/chat
+
 
 # 如果需要认证，可以添加以下配置
 # REACT_APP_API_KEY=your_api_key_here
@@ -11,3 +19,23 @@ REACT_APP_ENV=production
 # 其他可选配置
 # REACT_APP_WEBSOCKET_URI=ws://localhost:4000/graphql
 # REACT_APP_UPLOAD_ENDPOINT=http://localhost:4000/upload
+REACT_APP_APP_NAME=DeepSeek AI Chat
+REACT_APP_VERSION=1.0.0
+
+# 功能开关
+REACT_APP_USE_GRAPHQL=true
+REACT_APP_ENABLE_STREAMING=false
+REACT_APP_DEBUG=true
+
+# DeepSeek API 配置（前端显示用，不包含敏感信息）
+REACT_APP_DEFAULT_MODEL=deepseek-chat
+REACT_APP_MAX_TOKENS=2000
+REACT_APP_TEMPERATURE=0.7
+
+# UI 配置
+REACT_APP_THEME=ios
+REACT_APP_LANGUAGE=zh-CN
+REACT_APP_ENABLE_MARKDOWN=true
+REACT_APP_ENABLE_CODE_HIGHLIGHT=true
+
+https://ashengweb3.win,https://localhost:3000
