--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # GraphQL API 配置
-REACT_APP_GRAPHQL_URI=https://your-worker-name.your-subdomain.workers.dev/api/graphql
+REACT_APP_GRAPHQL_URI=https://ashengweb3.win/api/graphql
 
 # REST API 配置（备用）
-REACT_APP_API_BASE_URL=https://your-worker-name.your-subdomain.workers.dev
+REACT_APP_API_BASE_URL=https://ashengweb3.win
 
 # 聊天 API 端点
-REACT_APP_CHAT_API_URI=https://your-worker-name.your-subdomain.workers.dev/api/chat
+REACT_APP_CHAT_API_URI=https://ashengweb3.win/api/chat
 
 # 环境标识
 REACT_APP_ENV=development
