--- a/.env.production
+++ b/.env.production
@@ -1,12 +1,12 @@
 # GraphQL API 配置
 # GraphQL API 配置
-REACT_APP_GRAPHQL_URI=https://ashengweb3.win/api/graphql
+REACT_APP_GRAPHQL_URI=https://server.ashengweb3.win/api/graphql
 
 # REST API 配置（备用）
 REACT_APP_API_BASE_URL=https://ashengweb3.win
 
 # 聊天 API 端点
-REACT_APP_CHAT_API_URI=https://ashengweb3.win/api/chat
+REACT_APP_CHAT_API_URI=https://server.ashengweb3.win/api/chat
 
 
 # 如果需要认证，可以添加以下配置
